kubernetes/patient-record-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  labels:
    app: patient-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: nimeshrupasinghage/patient-service:${GITHUB_SHA}
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: my-docker-secret
