kubernetes/patient-record-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: LoadBalancer
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
