kubernetes/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthsync-service-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: a94092cac9a2e4f5c89f4f8c086e4b37-595736996.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 8080
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 8085
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8090
      - path: /aggregates
        pathType: Prefix
        backend:
          service:
            name: aggregate-service
            port:
              number: 8095
